# syd

./: Cargo.toml  README.md
crates/syd-client/: Cargo.toml
crates/syd-client/src/: lib.rs
crates/syd-core/: Cargo.toml
crates/syd-core/src/: lib.rs
crates/syd-daemon/: Cargo.toml
crates/syd-daemon/src/: main.rs
crates/syd-daemon/src/services/: audio.rs  bluetooth.rs  brightness.rs  media.rs  mod.rs  network.rs  notifications.rs  system.rs  tray.rs
examples/basic-shell/: Cargo.toml
examples/basic-shell/src/: main.rs
